# discord-bot

./: .gitignore  216602233083527168.yaml  664039327613059084.yaml  Dockerfile  bot.py  discord-bot.service  pyproject.toml  roles.yaml  schema.yaml
.github/workflows/: build.yaml
bot/: main.py  schema.yaml
dragonpaw_bot/: __main__.py  bot.py  colors.py  http.py  structs.py  utils.py
dragonpaw_bot/plugins/: lobby.py  role_menus.py
example-config/: config.toml  night_gaming.toml  ogl.toml
kubernetes/: discord-prod.yaml  discord-test.yaml  kustomization.yaml  namespace.yaml  sites.yaml
state/: 216602233083527168.pickle
