[tool.poetry]
name = "ash-bot"
version = "0.1.0"
description = "Ash's Discord Bot"
authors = ["Ash Arnold <ash@dragonpaw.org>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.5.1"
emojis = "^0.6.0"
loguru = "^0.5.3"
palettable = "^3.3.0"
python-dotenv = "^0.15.0"
PyYAML = "^5.3.1"
yamale = "^3.0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
